[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/font_als.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/background1.png" type="Texture" id=2]
[ext_resource path="res://cards.gd" type="Script" id=3]
[ext_resource path="res://card.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 1 )

[node name="control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -279, 226 )
script = ExtResource( 3 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 1254, 304 )
texture = ExtResource( 2 )

[node name="texture_card1" parent="." instance=ExtResource( 4 )]
margin_left = 147.0
margin_top = 122.0
margin_right = 1227.0
margin_bottom = 1812.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="texture_card2" parent="." instance=ExtResource( 4 )]
margin_left = 690.0
margin_top = 120.0
margin_right = 1770.0
margin_bottom = 1814.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="texture_card3" parent="." instance=ExtResource( 4 )]
margin_left = 1221.0
margin_top = 120.0
margin_right = 2301.0
margin_bottom = 1818.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="text_new_level" type="RichTextLabel" parent="."]
margin_left = 694.0
margin_top = 46.0
margin_right = 1276.0
margin_bottom = 110.0
custom_colors/default_color = Color( 0.921569, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Новый уровень:"
